--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             </div>
         </section>
     </main>
-    <footer class="">
+    <footer class="text-white mt-5 p-10 text-center bg-gray-600">
         <p>Buy From US</p>
     </footer>
 </body>
